--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -16,7 +16,8 @@
           
         {%if current_user.is_authenticated%}
         <a class="nav-link" href="{{url_for('marvel.profile')}}">User Profile</a>  
-        <a class="nav-link" href="{{url_for('marvel.logout')}}">Logout</a>    
+        <a class="nav-link" href="{{url_for('marvel.logout')}}">Logout</a>  
+        <a class="nav-link" href="{{url_for('api.marvelcharacters')}}">API TEST</a>   
         {%else%}
           <a class="nav-link" href="{{url_for('marvel.signin')}}">Login</a>       
           <a class="nav-link" href="{{url_for('marvel.signup')}}">Create an Account</a>      
