--- a/app/templates/apicall.html
+++ b/app/templates/apicall.html
@@ -25,7 +25,7 @@
 
   </div>
   <div class="row justify-content-center mt=8">
-    <h1> Marvel Character API</h1>
+    <h1> Marvel Character API  :-)</h1>
   </div>
 
   <div class="row justify-content-center mt=8">
